# geogame

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
geogame/: main.py
geogame/static/: styles.css
geogame/templates/: game.html.jinja2  game_options.html.jinja2  index.html.jinja2
geogame/utils/: db.py  load_db.py  models.py
