[tool.poetry]
name = "geogame"
version = "0.1.0"
description = ""
authors = ["Piotr Grędowski <piotrgredowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
Jinja2 = "^3.1.2"
uvicorn = "^0.18.2"
fastapi-utils = "^0.2.1"
fast-autocomplete = {extras = ["levenshtein"], version = "^0.9.0"}
websockets = "^10.3"
fuzzdex = "^0.5.0"

[tool.poetry.group.dev.dependencies]
rope = "^1.2.0"
black = "^22.6.0"
isort = "^5.10.1"
autoflake = "^1.4"
mypy = "^0.961"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
include_trailing_comma = true
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=geogame --cov-branch --cov-report=xml --cov-report=html --junitxml=junit.xml"
